AC_INIT([wordfreq], [0.2.0], [dmaczka@vt.edu])

AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wportability -Wall -Werror subdir-objects])
AM_PROG_AR
LT_INIT
AC_PROG_CC
AC_PROG_CC_C99
AM_PROG_CC_C_O
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_FILES([Makefile analytics.pc])
AC_OUTPUT
